--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>./configure --with sugar &amp;&amp; make coffee &amp;&amp; make install-drink by megawan</title>
+    <title>./configure --with brain</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -18,11 +18,11 @@
 
   </head>
   <body>
-      <div id="header">
+      <!--<div id="header">
         <nav>
           <li class="fork"><a href="https://github.com/megawan">View On GitHub</a></li>
         </nav>
-      </div><!-- end header -->
+      </div>--><!-- end header -->
 
     <div class="wrapper">
 
