--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>./configure --with sugar &amp;&amp; make coffee &amp;&amp; make install-drink</h1>
+          <h1>./configure --with brain</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/megawan">megawan</a></span>
