--- a/index.html
+++ b/index.html
@@ -34,19 +34,24 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Who am i?</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>intro</h3>
 
-<p>Hello there! I am Gika Megawan. I am a founder of my software company called <a href="http://bethesdavenue.com">Bethesdavenue Indonesia</a>.</p>
+<p>Hello there! I am Gika Megawan. I am a founder of my software company called <a href="http://bethesdavenue.com">Bethesdavenue Indonesia</a>. i write my thoughts and code here.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
 <p>
-  • <a href="https://github.com/megawan/valkyrie">Valkyrie</a>
+  • <a href="https://github.com/megawan/valkyrie">Valkyrie</a></br>
   • <a href="#">Cocoktanam</a>
 </p>
   
 <h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quotes</h3>
+<p>
+  • <code>“Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.” ― Sun Tzu</code></br></br>
+  • <code>“Let the future tell the truth, and evaluate each one according to his work and accomplishments. The present is theirs; the future, for which I have really worked, is mine” ― Nikola Tesla</code>
+</p>
       </section>
 
     </div>
