--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
 
 <p>
-  • <a href="https://github.com/megawan/valkyrie">Valkyrie</a></br>
-  • <a href="#">Cocoktanam</a>
+  • <a href="https://github.com/megawan/valkyrie">Valkyrie.</a> Network security tool for prevents Bruteforce and Dictionary attack.</br>
+  • <a href="#">Cocoktanam.</a> Inventory and finance management system for agricultural.
 </p>
   
 <h3>
