--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>intro</h3>
 
-<p>Hello there! I am Gika Megawan. I am a founder of my software company called <a href="http://bethesdavenue.com">Bethesdavenue Indonesia</a>. i write my thoughts and code here.</p>
+<p>Hello there! I am Gika Megawan. A software developer; a bookworm; a coffee addict; a thinkerer; a founder of my company called <a href="http://bethesdavenue.com">Bethesdavenue Indonesia</a>. </br>i write my thoughts and code here.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
