--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <p>
   • <a href="https://github.com/megawan/valkyrie">Valkyrie.</a> Network security tool for prevents Bruteforce and Dictionary attack.</br>
-  • <a href="#">Cocoktanam.</a> Inventory and finance management system for agricultural.
+  • <a href="#">Cocoktanam.</a> Inventory and finance management system for agricultural sector.
 </p>
   
 <h3>
