--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>./configure --with brain</h1>
+          <h1>./configure --with sugar</h1>
           <p></p>
           <hr>
         </div>
