--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>intro</h3>
 
-<p>Hello there! I am Gika Megawan Pramudita.</br>a system engineer by day;</br>a ninja by night;</br> a bookworm;</br> a coffee addict;</br> a thinkerer;</br> a founder of my company called <a href="http://bethesdavenue.com">Bethesdavenue Indonesia</a>. </br></br>i write my thoughts and code here.</p>
+<p>Hello there!</br>a system engineer by day;</br>a ninja by night;</br> a bookworm;</br> a coffee addict;</br></br>i write my thoughts and code here.</p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
@@ -50,7 +50,6 @@
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Quotes</h3>
 <p>
   • <code>“Let your plans be dark and impenetrable as night, and when you move, fall like a thunderbolt.” ― Sun Tzu</code></br></br>
-  • <code>“Let the future tell the truth, and evaluate each one according to his work and accomplishments. The present is theirs; the future, for which I have really worked, is mine” ― Nikola Tesla</code>
 </p>
       </section>
 
