--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>./configure --with brain</title>
+    <title>./configure --with sugar && make tea</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,22 +28,18 @@
 
       <section>
         <div id="title">
-          <h1>./configure --with sugar</h1>
+          <h1>./configure --with sugar && make tea</h1>
           <p></p>
           <hr>
         </div>
 
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>intro</h3>
-
-<p>Hello there!</br>a system engineer by day;</br>a ninja by night;</br> a bookworm;</br> a coffee addict;</br></br>i write my thoughts and code here.</p>
-
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Projects</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Side Projects</h3>
 
 <p>
-  • <a href="https://github.com/megawan/valkyrie">Valkyrie.</a> Network security tool for prevents Bruteforce and Dictionary attack.</br>
-  • <a href="#">Cocoktanam.</a> Inventory and finance management system for agricultural sector.
+  • <a href="https://www.istockphoto.com/portfolio/megawan">iStock.</a> I travel, I take pictures, I sell.</br>
+  • <a href="https://medium.com/@megawan">Medium.</a> I pour my thoughts and documentation here.</br>
+  • <a href="https://github.com/megawan">Github.</a> Just a collection of my spaghetti code.
 </p>
   
 <h3>
